packageslockが消えない

--- a/Frankenstein/.gitignore
+++ b/Frankenstein/.gitignore
@@ -10,8 +10,8 @@
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 
-/packages-lock.json
-/SceneTemplateSettings.json
+/[Pp]ackages/packages-lock.json
+/[Pp]rojectSettings/SceneTemplateSettings.json
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
